--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
         }
 
         .container {
-            max-width: 800px;
+            max-width: 900px;
             margin: auto;
             background: #fff;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
 
         .header {
-            text-align: center;
             margin-bottom: 20px;
         }
 
         .header h1 {
-            font-size: 2rem;
+            font-size: 2.5rem;
             color: #444;
         }
 
@@ -46,49 +46,42 @@
 
         .section {
             margin-bottom: 20px;
+            text-align: left;
         }
 
         .section h3 {
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             border-bottom: 2px solid #ddd;
             padding-bottom: 5px;
             margin-bottom: 10px;
             color: #444;
         }
 
-        .section p, .section ul {
-            margin-bottom: 10px;
-        }
-
-        ul {
+        .section ul {
             list-style-type: none;
             padding-left: 0;
         }
 
-        ul li {
+        .section ul li {
             background: #f9f9f9;
             margin-bottom: 5px;
             padding: 10px;
             border-radius: 5px;
+            text-align: left;
         }
 
-        .contact-info {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .contact-info a {
+        a {
             text-decoration: none;
             color: #007BFF;
         }
 
-        .contact-info a:hover {
+        a:hover {
             text-decoration: underline;
         }
 
         @media (max-width: 600px) {
             .header h1 {
-                font-size: 1.5rem;
+                font-size: 2rem;
             }
 
             .header h2 {
@@ -107,100 +100,96 @@
         <div class="section">
             <h3>Contact</h3>
             <ul>
-                <li>Address: Yıldırım Mahallesi Cami Sokak No: 17/11, Bayrampaşa / İstanbul / Türkiye</li>
-                <li>Phone: [+90] 5060292539</li>
-                <li>Email: <a href="mailto:mesutormanli@gmail.com">mesutormanli@gmail.com</a></li>
-                <li>GitHub: <a href="https://github.com/hyperpostulate" target="_blank">https://github.com/hyperpostulate</a></li>
-                <li>Nationality: Turkish</li>
-                <li>Date of Birth: 01/01/1992</li>
-                <li>Marital Status: Single</li>
-                <li>Gender: Male</li>
-                <li>Driving License: "A2" and "B" classes</li>
-                <li>Military Service Status: Exempted</li>
+                <li><strong>Address:</strong> Yıldırım Mahallesi Cami Sokak No: 17/11, Bayrampaşa / İstanbul / Türkiye</li>
+                <li><strong>Phone:</strong> [+90] 5060292539</li>
+                <li><strong>Email:</strong> <a href="mailto:mesutormanli@gmail.com">mesutormanli@gmail.com</a></li>
+                <li><strong>GitHub:</strong> <a href="https://github.com/hyperpostulate" target="_blank">https://github.com/hyperpostulate</a></li>
+                <li><strong>Nationality:</strong> Turkish</li>
+                <li><strong>Date of Birth:</strong> 01/01/1992</li>
+                <li><strong>Marital Status:</strong> Single</li>
+                <li><strong>Gender:</strong> Male</li>
+                <li><strong>Driving License:</strong> "A2" and "B" classes</li>
+                <li><strong>Military Service Status:</strong> Exempted</li>
             </ul>
         </div>
 
         <div class="section">
             <h3>Education</h3>
             <ul>
-                <li>Master's Degree, Marmara University (Dropout) [Feb. 2016 - Oct. 2019]</li>
-                <li>Bachelor's Degree, Sociology, Anadolu University [Sep. 2015 - Present]</li>
-                <li>Bachelor's Degree, Computer Science & Engineering, Marmara University [Sep. 2010 – Feb. 2015]</li>
+                <li><strong>Master's Degree (Dropout):</strong> Marmara University, Institute of Pure and Applied Sciences, Computer Engineering (Feb. 2016 - Oct. 2019)</li>
+                <li><strong>Bachelor's Degree:</strong> Anadolu University, Open Education Faculty, Sociology (Sep. 2015 - Present)</li>
+                <li><strong>Bachelor's Degree:</strong> Marmara University, Faculty of Engineering, Computer Science & Engineering (Sep. 2010 – Feb. 2015)</li>
             </ul>
         </div>
 
         <div class="section">
             <h3>Languages</h3>
             <ul>
-                <li>Turkish (Mother Tongue)</li>
-                <li>English (Professional Working Proficiency)</li>
+                <li><strong>Mother Tongue:</strong> Turkish</li>
+                <li><strong>Foreign Language:</strong> English (Professional Working Proficiency)</li>
             </ul>
         </div>
 
         <div class="section">
             <h3>Professional Skills</h3>
             <ul>
-                <li>Programming Languages: Java, C, JavaScript, x86 & MIPS Assembly, Unix Shell Script</li>
-                <li>Frameworks: Spring Boot, Hibernate, JSF, JSP</li>
-                <li>Database Systems: Oracle PL/SQL, Microsoft SQL Server, PostgreSQL, MySQL, MongoDB, Apache Hadoop, Neo4J, Hazelcast, Redis</li>
-                <li>Web Service Architectures: REST / SOAP</li>
-                <li>Operating Systems: GNU/Linux (Debian, Ubuntu, openSUSE, Fedora, RHEL distributions)</li>
-                <li>Version Control: Git, Subversion, Microsoft Team Foundation Server, IBM Rational ClearCase</li>
-                <li>Virtualization Tools: Oracle VM Virtualbox, VMWare, Docker, Kubernetes</li>
-                <li>Workflow Management Tools: Atlassian Jira, Atlassian Confluence, ONE Automation [UC4], IBM Rational ClearQuest, Jenkins, Webmin</li>
-                <li>Simulation Tools: Micro Saint Sharp, AnyLogic</li>
-                <li>Network Analysis / Digital Forensics: Wireshark, Zenmap, SANS SIFT Workstation, Kali Linux / Backtrack, The Sleuth Kit, Autopsy</li>
+                <li><strong>Software Development Tools / Programming Languages:</strong> Java, C, x86 & MIPS Assembly, Unix Shell Script, JavaScript</li>
+                <li><strong>Frameworks:</strong> Java EE (JSF, JSP), Spring Framework / Spring Boot, Hibernate, Maven, Java Servlets</li>
+                <li><strong>Database Management Systems:</strong> Oracle PL/SQL, Microsoft SQL Server, PostgreSQL, MySQL, MongoDB, Apache Hadoop, Neo4J, Hazelcast, Redis</li>
+                <li><strong>Web Service Architectures:</strong> REST / SOAP</li>
+                <li><strong>Operating Systems:</strong> GNU Linux (Debian, Ubuntu, openSUSE, Fedora, RHEL distributions)</li>
+                <li><strong>Version Control Systems:</strong> Git, Subversion, Microsoft Team Foundation Server, IBM Rational ClearCase</li>
+                <li><strong>Virtualization Tools:</strong> Oracle VM Virtualbox, VMWare, Docker, Kubernetes</li>
+                <li><strong>Workflow Management / Automation Tools:</strong> Atlassian Jira, Atlassian Confluence, ONE Automation (UC4), IBM Rational ClearQuest, Jenkins, Webmin</li>
+                <li><strong>Simulation Tools:</strong> Micro Saint Sharp, AnyLogic</li>
+                <li><strong>Network Analysis / Digital Forensics:</strong> Wireshark, Zenmap, SANS SIFT Workstation, Kali Linux, Backtrack, The Sleuth Kit, Autopsy</li>
             </ul>
         </div>
 
         <div class="section">
             <h3>Work Experiences</h3>
             <ul>
-                <li>Software Development Team Leader at Şekerbank [May. 2022 - Present]</li>
-                <li>Senior Software Engineer at Fibabanka [Feb. 2021 - Apr. 2022]</li>
-                <li>Senior Software Engineer at Kafein Technology Solutions [Mar. 2020 - Feb.2021]</li>
-                <li>Senior Software Engineer at Finartz [Nov. 2018 - Mar. 2020]</li>
-                <li>Software Engineer at Sistek [May. 2018 - Sep. 2018]</li>
-                <li>Software Development Consultant at OBSS [Mar. 2017 - May. 2018]</li>
-                <li>Analyst Developer at i2i Systems [Apr. 2015 – Mar. 2017]</li>
-                <li>Teaching Assistant at Marmara University [Oct. 2013 – Jun. 2014]</li>
-                <li>Project Intern at Marmara University [Jul. 2013 – Sep. 2013]</li>
-                <li>Software Development Intern at YazEvi Yazılım [Jun. 2012 – Sep. 2012]</li>
+                <li><strong>Software Development Team Leader:</strong> Şekerbank (May. 2022 - Present)</li>
+                <li><strong>Senior Software Engineer:</strong> Fibabanka (Feb. 2021 - Apr. 2022)</li>
+                <li><strong>Senior Software Engineer:</strong> Kafein Technology Solutions (Mar. 2020 - Feb. 2021)</li>
+                <li><strong>Senior Software Engineer:</strong> Finartz (Nov. 2018 - Mar. 2020)</li>
+                <li><strong>Software Engineer:</strong> Sistek (May. 2018 - Sep. 2018)</li>
+                <li><strong>Software Development Consultant:</strong> OBSS (Mar. 2017 - May. 2018)</li>
+                <li><strong>Analyst Developer:</strong> i2i Systems (Apr. 2015 - Mar. 2017)</li>
+                <li><strong>Teaching Assistant:</strong> Marmara University (Oct. 2013 - Jun. 2014)</li>
+                <li><strong>Project Intern:</strong> Marmara University (Jul. 2013 - Sep. 2013)</li>
+                <li><strong>Software Development Intern:</strong> YazEvi Yazılım (Jun. 2012 - Sep. 2012)</li>
             </ul>
         </div>
 
         <div class="section">
             <h3>Projects</h3>
             <ul>
-                <li>Digital Banking Projects at Şekerbank [Sep. 2024 - Present]</li>
-                <li>Internet Banking Projects at Şekerbank [Jan. 2024 - Sep. 2024]</li>
-                <li>Internet Banking & Call Center Projects at Şekerbank [Apr. 2023 - Jan. 2024]</li>
-                <li>Internet Banking, Call Center & Digital Banking Backend Projects at Şekerbank [May. 2022 - Apr. 2023]</li>
-                <li>Internet / Mobile Banking Projects at Fibabanka [Feb. 2021 - Apr. 2022]</li>
-                <li>Marketing Solutions Projects at Turkcell [Mar. 2020 - Feb. 2021]</li>
-                <li>E-Commerce Projects at GittiGidiyor / eBay Turkey [Nov. 2018 - Mar. 2020]</li>
-                <li>IOSIS-BOS at Tofaş [May. 2018 - Sep. 2018]</li>
-                <li>Digital Banking Projects at TEB [Aug. 2017 - May. 2018]</li>
-                <li>Modular Corporation at Allianz [Mar. 2017 - Aug. 2017]</li>
-                <li>Smartics at TTNet [Dec. 2016 – Mar. 2017]</li>
-                <li>Ortak Prim at Türk Telekom [Mar. 2016 – Dec. 2016]</li>
-                <li>BSS/OSS at NAXTEL [Dec. 2015 – Jun. 2016]</li>
-                <li>Quota Manager at AVEA [Sep. 2015 – Dec. 2015]</li>
-                <li>SMART GUI at AVEA [Jun. 2015 – Sep. 2015]</li>
-                <li>Modeling and Simulation of Intermodal Public Transportation at Marmara University [Jul. 2013 – Jul. 2014]</li>
+                <li><strong>Digital Banking Projects:</strong> Şekerbank (Sep. 2024 - Present)</li>
+                <li><strong>Internet Banking Projects:</strong> Şekerbank (Jan. 2024 - Sep. 2024)</li>
+                <li><strong>Internet Banking & Call Center Projects:</strong> Şekerbank (Apr. 2023 - Jan. 2024)</li>
+                <li><strong>Internet Banking, Call Center & Digital Banking Backend Projects:</strong> Şekerbank (May. 2022 - Apr. 2023)</li>
+                <li><strong>Internet / Mobile Banking Projects:</strong> Fibabanka (Feb. 2021 - Apr. 2022)</li>
+                <li><strong>Marketing Solutions Projects:</strong> Turkcell (Mar. 2020 - Feb. 2021)</li>
+                <li><strong>E-Commerce Projects:</strong> GittiGidiyor / eBay Turkey (Nov. 2018 - Mar. 2020)</li>
+                <li><strong>IOSIS-BOS:</strong> Tofaş (May. 2018 - Sep. 2018)</li>
+                <li><strong>Digital Banking Projects:</strong> TEB (Aug. 2017 - May. 2018)</li>
+                <li><strong>Modular Corporation:</strong> Allianz (Mar. 2017 - Aug. 2017)</li>
+                <li><strong>Smartics:</strong> TTNet (Dec. 2016 - Mar. 2017)</li>
+                <li><strong>Ortak Prim:</strong> Türk Telekom (Mar. 2016 - Dec. 2016)</li>
+                <li><strong>BSS/OSS:</strong> NAXTEL (Dec. 2015 - Jun. 2016)</li>
+                <li><strong>Quota Manager:</strong> AVEA (Sep. 2015 - Dec. 2015)</li>
+                <li><strong>SMART GUI:</strong> AVEA (Jun. 2015 - Sep. 2015)</li>
+                <li><strong>Modeling and Simulation of Intermodal Public Transportation:</strong> Marmara University (Jul. 2013 - Jul. 2014)</li>
             </ul>
         </div>
 
         <div class="section">
             <h3>Technical & Personal Interests</h3>
             <ul>
-                <li>Technical Interests: Enterprise Software Frameworks, Distributed Architectures, Wireless and Mobile Networks, Vehicular Networks, Social Network Analysis, Digital Forensics</li>
-                <li>Personal Interests: Analog Photography, War Studies and History, Mechanical Watches, Fountain Pens, Outdoor Survival, Do It Yourself (DIY)</li>
+                <li><strong>Technical Interests:</strong> Enterprise Software Frameworks, Distributed Architectures, Wireless and Mobile Networks, Vehicular Networks, Social Network Analysis, Digital Forensics</li>
+                <li><strong>Personal Interests:</strong> Analog Photography, War Studies and History, Mechanical Watches, Fountain Pens, Outdoor Survival, DIY (Do It Yourself)</li>
             </ul>
-        </div>
-
-        <div class="contact-info">
-            <p>For more details, visit my <a href="https://github.com/hyperpostulate" target="_blank">GitHub</a> profile.</p>
         </div>
     </div>
 </body>
